alignment fix

--- a/server-monitoring/src/app/environment/manager/main-right/environment-manager-main-right.component.scss
+++ b/server-monitoring/src/app/environment/manager/main-right/environment-manager-main-right.component.scss
@@ -106,6 +106,7 @@
     &.k-dropdownlist {
         border-width: 0px !important;
         box-shadow: none !important;
+        padding: 0px !important;
         &:focus, 
         &:focus-visible,
         &:focus-within {
